.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:53:27 **** Incremental Build of configuration gcc-debug for project MiXiM ****
make MODE=debug CONFIGNAME=gcc-debug all 
cd src && /usr/bin/make
make[1]: Entering directory '/d/Omnet/MiXiM/src'
make[1]: Leaving directory '/d/Omnet/MiXiM/src'
cd examples && /usr/bin/make
make[1]: Entering directory '/d/Omnet/MiXiM/examples'
make[1]: Leaving directory '/d/Omnet/MiXiM/examples'
19:53:31 **** Incremental Build of configuration gcc-debug for project Greedy ****
make MODE=debug CONFIGNAME=gcc-debug all 
GeoPlus.cc
In file included from E:/Software/omnetpp-4.6/include/ccomponent.h:25:0,
                 from E:/Software/omnetpp-4.6/include/omnetpp.h:26,
                 from ../MiXiM/src/base/modules/BaseModule.h:25,
                 from GeoPlus.cc:1:
E:/Software/omnetpp-4.6/include/cenvir.h: In instantiation of 'cEnvir& cEnvir::operator<<(const T&) [with T = GeoNode]':
GeoPlus.cc:226:52:   required from here
E:/Software/omnetpp-4.6/include/cenvir.h:522:62: error: cannot bind 'std::ostream {aka std::basic_ostream<char>}' lvalue to 'std::basic_ostream<char>&&'
     template<typename T> cEnvir& operator<<(const T& t) {out << t; return *this;}
                                                              ^
In file included from E:/Software/omnetpp-4.6/tools/win32/mingw32/include/c++/4.9.2/istream:39:0,
                 from E:/Software/omnetpp-4.6/tools/win32/mingw32/include/c++/4.9.2/sstream:38,
                 from ../MiXiM/src/base/modules/BaseModule.h:24,
                 from GeoPlus.cc:1:
E:/Software/omnetpp-4.6/tools/win32/mingw32/include/c++/4.9.2/ostream:602:5: note: initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = GeoNode]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
make: *** [out/gcc-debug//GeoPlus.o] Error 1
Makefile:128: recipe for target 'out/gcc-debug//GeoPlus.o' failed
